# cora-2bm

./: .env.example  README.md  pyproject.toml
src/cora_2bm/: __init__.py  container.py  settings.py
src/cora_2bm/acquisition/: dx_recorder.py  tomoscan_workflow.py
src/cora_2bm/analysis/: tomopy_queue_adapter.py
src/cora_2bm/control/: epics_2bm_adapter.py
src/cora_2bm/scheduling/: cli.py  dmagic_sync.py
